# rag-app

./: .gitignore  README.md  pyproject.toml  test.py  test_scroll.py  todo.md
backend/: db.py  pgvector-docker-run.sh  rag.py  test.py
documents2/: uvu.txt
frontend/: tui.py  tui.tcss
resources/: welcome.txt
src/rag_app/: main.py
src/rag_app/backend/: chat_test.py  config.py  db.py  rag.py  test.py  utils.py
src/rag_app/backend/database/: __init__.py  config_repo.py  core.py  resource_repo.py  workspace_repo.py
src/rag_app/frontend/: app_workers.py  command_handler.py  input_router.py  styles.tcss  tui.py  tui.tcss  user_config_keys.py
src/rag_app/frontend/styles/: style.tcss  style_chat_widgets.tcss  style_config_modal.tcss  style_custom_spinner.tcss  style_main.tcss  style_resource_tree.tcss  style_theme_modal.tcss  style_welcome.tcss  style_workspace_modal.tcss
src/rag_app/frontend/widgets/: chat_widgets.py  config_modal.py  custom_spinner.py  prompt_input.py  resources_tree_widget.py  streaming_markdown.py  theme_menu.py  workspace_menu_modal.py  workspaces_modal.py
src/rag_app/resources/: welcome.txt
