[project]
name = "rag-app"
version = "0.1.0"
description = "RAG application with TUI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "textual[syntax]>=8.2.7",
    "textual-dev>=1.8.0",
    "langchain-google-genai>=4.2.5",
]

[project.scripts]
rag-app = "rag_app.main:run_cli"

[tool.uv]
package = true
