[build-system]
requires= ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-app"
version = "0.1.0"
description = "RAG application with TUI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "textual[syntax]>=8.2.7",
    "textual-dev>=1.8.0",
    "langchain-google-genai>=4.2.5",
    "langchain-chroma>=1.1.0",
    "chromadb>=1.5.9",
    "bs4>=0.0.2",
    "lxml>=6.1.1",
]

[project.scripts]
rag-app = "rag_app.main:run_cli"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages=[
    "src/rag_app",
]
